2002-06-05  Jody Goldberg <jody@gnome.org>

	* mime-edit-dialog.c (mime_add_dialog_new) :

	* mime-edit-dialog.c (mime_edit_editable_enters) : new.
	(fill_dialog) : mime type is always sensitive.
	(mime_edit_dialog_init) : use mime_edit_editable_enters and set the
	  default response.
	(mime_add_dialog_new) : forceably define the model before is-add and
	  set the parent.


	* model-entry.c (model_entry_insert_child) : be paranoid.  Sort the
	  mime entries too.

	* file-types-capplet.c (main) : !KLUDGE! if we are editing
	  application/octet-stream assume that people really want to create a
	  new mime type.

2002-06-04  Jody Goldberg <jody@gnome.org>

	* mime-type-info.c (mime_type_info_save) : Add a freeze/thaw around
	  the assignments.

2002-05-31  Jody Goldberg <jody@gnome.org>

	* mime-type-info.c (get_category_name) : disable debug spew.

	* model-entry.c (model_entry_insert_child) : order the categories
	nicely.

2002-05-31  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=83545
	* mime-types-model.c (mime_types_model_iter_parent) : Use the child
	  not the result.

2002-05-29  Jody Goldberg <jody@gnome.org>

	* mime-type-info.c (get_category_description) : put things in Misc if
	  they have no defined category.
	(get_category_name) : ditto.

2002-05-24  Satyajit Kanungo <satyajit.kanungo@wipro.com>

	* file-types-capplet.c : Changed the help file link
	  to get the help document from user-guide.

2002-05-24  Jody Goldberg <jody@gnome.org>

	* mime-type-info.c (mime_category_info_load_all) : make this more paranoid.
	* mime-category-edit-dialog.c (update_subcategories) : Move this over
	  here.

2002-05-17  Jody Goldberg <jody@gnome.org>

	* mime-type-info.c (mime_category_info_using_custom_app) : add some
	  protection.

2002-05-08  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=17728
	(mime_type_info_save): a patch inspired by Archit Baweja's proposal.
